# softuni-application-development-with-cpp

./: README.md
01.Hello_SDL2_World/: main.cpp
02.SDL2_Runtime/: CMakeLists.txt
02.SDL2_Runtime/sdl_utils/: MonitorWindow.cpp  SDLLoader.h  Texture.cpp
03.Input_Events/: CMakeLists.txt
03.Input_Events/engine/: Engine.cpp  Engine.h
03.Input_Events/sdl_utils/: InputEvent.cpp  InputEvent.h
04.Hardware_Rendering/: CMakeLists.txt  main.cpp
04.Hardware_Rendering/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp
04.Hardware_Rendering/game/: Game.cpp  Game.h
04.Hardware_Rendering/sdl_utils/: MonitorWindow.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
05.Scaling_And_Alpha_Blending/: CMakeLists.txt
05.Scaling_And_Alpha_Blending/common/: CommonDefines.h
05.Scaling_And_Alpha_Blending/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp
05.Scaling_And_Alpha_Blending/game/: Game.cpp  Game.h
05.Scaling_And_Alpha_Blending/sdl_utils/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  Renderer.h  SDLLoader.cpp  Texture.cpp  Texture.h
06.Texts/: CMakeLists.txt
06.Texts/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp  EngineConfigLoader.h
06.Texts/game/: Game.cpp  Game.h
06.Texts/sdl_utils/: CMakeLists.txt
06.Texts/utils/: CMakeLists.txt
07.Improved_Encapsulation/: CMakeLists.txt
07.Improved_Encapsulation/src/: main.cpp
08.Sprite_Animations_Flipping_Effects_And_Rotations/: CMakeLists.txt
08.Sprite_Animations_Flipping_Effects_And_Rotations/manager_utils/: CMakeLists.txt
08.Sprite_Animations_Flipping_Effects_And_Rotations/sdl_utils/: CMakeLists.txt
08.Sprite_Animations_Flipping_Effects_And_Rotations/utils/: CMakeLists.txt
09.Buttons_And_Timers/: CMakeLists.txt
09.Buttons_And_Timers/manager_utils/: CMakeLists.txt
10.Game_1_4/: CMakeLists.txt
10.Game_1_4/manager_utils/: CMakeLists.txt
10.Game_1_4/manager_utils/includes/manager_utils/drawing/: Text.h  Widget.h
10.Game_1_4/manager_utils/includes/manager_utils/managers/: DrawManager.h  ManagerBase.h  ResourceManager.h  TimerManager.h
10.Game_1_4/manager_utils/includes/manager_utils/managers/config/: ManagerHandlerCfg.h
10.Game_1_4/manager_utils/src/drawing/: Text.cpp  Widget.cpp
10.Game_1_4/manager_utils/src/input/: ButtonBase.cpp
10.Game_1_4/manager_utils/src/managers/: DrawManager.cpp  ManagerHandler.cpp  ResourceManager.cpp  TimerManager.cpp
10.Game_1_4/manager_utils/src/timer/: TimerData.cpp
10.Game_1_4/sdl_utils/: CMakeLists.txt
10.Game_1_4/utils/: CMakeLists.txt
11.Game_2_4/: CMakeLists.txt
11.Game_2_4/cmake_helpers/: helpers.cmake
11.Game_2_4/includes/common/: CommonDefines.h
11.Game_2_4/includes/engine/: Engine.h
11.Game_2_4/includes/engine/config/: EngineConfig.h
11.Game_2_4/includes/game/: Game.h
11.Game_2_4/includes/game/board/: ChessBoard.h  MoveSelector.h
11.Game_2_4/includes/game/chess_defines/: ChessDefines.h  ChessStructs.h
11.Game_2_4/includes/game/chess_pieces/: PieceHandler.h  PieceHandlerPopulator.h
11.Game_2_4/includes/game/chess_pieces/types/: ChessPiece.h  Pawn.h  Rook.h  UnfinishedPiece.h
11.Game_2_4/includes/game/config/: GameConfig.h
11.Game_2_4/includes/game/proxies/: GameBoardProxy.h
11.Game_2_4/includes/game/utility/: BoardPos.h  BoardUtils.h
11.Game_2_4/manager_utils/: CMakeLists.txt
11.Game_2_4/manager_utils/includes/manager_utils/debug/: DebugConsole.h
11.Game_2_4/manager_utils/includes/manager_utils/drawing/: Image.h  Text.h  Widget.h
11.Game_2_4/manager_utils/includes/manager_utils/input/: ButtonBase.h
11.Game_2_4/manager_utils/includes/manager_utils/managers/: DrawManager.h  ManagerBase.h  ManagerHandler.h  ResourceManager.h  TimerManager.h
11.Game_2_4/manager_utils/includes/manager_utils/managers/config/: DrawManagerCfg.h  ResourceManagerCfg.h
11.Game_2_4/manager_utils/includes/manager_utils/timer/: TimerClient.h
11.Game_2_4/manager_utils/src/debug/: DebugConsole.cpp
11.Game_2_4/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
11.Game_2_4/manager_utils/src/managers/: DrawManager.cpp  ManagerHandler.cpp  ResourceManager.cpp  TimerManager.cpp
11.Game_2_4/manager_utils/src/timer/: TimerClient.cpp
11.Game_2_4/sdl_utils/includes/sdl_utils/: InputEvent.h  MonitorWindow.h  SDLLoader.h  Texture.h
11.Game_2_4/sdl_utils/includes/sdl_utils/config/: MonitorWindowCfg.h
11.Game_2_4/sdl_utils/includes/sdl_utils/containers/: ImageContainer.h  TextContainer.h
11.Game_2_4/sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
11.Game_2_4/sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
11.Game_2_4/src/engine/: Engine.cpp  EngineConfigLoader.cpp
11.Game_2_4/src/game/: Game.cpp
11.Game_2_4/src/game/board/: ChessBoard.cpp  MoveSelector.cpp
11.Game_2_4/src/game/chess_pieces/: PieceHandler.cpp  PieceHandlerPopulator.cpp
11.Game_2_4/src/game/chess_pieces/types/: ChessPiece.cpp  Pawn.cpp  Rook.cpp  UnfinishedPiece.cpp
11.Game_2_4/src/game/utility/: BoardUtils.cpp
11.Game_2_4/utils/includes/utils/drawing/: Color.h  DrawParams.h
11.Game_2_4/utils/includes/utils/input/: EventDefines.h
11.Game_2_4/utils/includes/utils/thread/: ThreadUtils.h
11.Game_2_4/utils/includes/utils/time/: Time.h
11.Game_2_4/utils/src/drawing/: Color.cpp  DrawParams.cpp
11.Game_2_4/utils/src/thread/: ThreadUtils.cpp
Hello_SDL2_World/: CMakeLists.txt
Input_Events/: main.cpp
Input_Events/sdl_utils/: MonitorWindow.cpp  MonitorWindow.h  Texture.cpp
SDL2_Runtime/: main.cpp
SDL2_Runtime/sdl_utils/: Texture.h
(+140 files in other folders)
